force-app/main/default/objects/Campaign_Level__c/Campaign_Level__c.object-meta.xml
<CustomObject>
    <description>Indicates levels of achievement and payment for incentive type Campaigns.</description>
    <label>Campaign Level</label>
    <nameField>
        <label>Campaign Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>