force-app/main/default/objects/Campaign_Level__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, promotional payment requests for members reaching this Campaign Level will require an approval to pay donors.</description>
    <inlineHelpText>If checked, promotional payment requests for members reaching this Campaign Level will require an approval to pay donors.</inlineHelpText>
    <label>Approval Required?</label>
    <type>Checkbox</type>
</CustomField>