force-app/main/default/objects/Campaign_Level__c/fields/Award_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Dollar_Amount__c</fullName>
    <description>Indicates the dollar amount award for the incentive level.</description>
    <inlineHelpText>Indicates the dollar amount award for the incentive level.</inlineHelpText>
    <label>Award (Dollar Amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>