force-app/main/default/objects/Campaign_Level__c/fields/Award_Point_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Point_Amount__c</fullName>
    <description>Indicates the point amount award for the incentive level.</description>
    <inlineHelpText>Indicates the point amount award for the incentive level.</inlineHelpText>
    <label>Award (Point Amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>