force-app/main/default/objects/Campaign_Level__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign to which this Level belongs. Campaign MUST be an `Incentive` Type to link correctly.</description>
    <inlineHelpText>The Campaign to which this Level belongs. Campaign MUST be an `Incentive` Type to link correctly.</inlineHelpText>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Incentive Type Campaign to link this Level.</errorMessage>
        <filterItems>
            <field>Campaign.Type</field>
            <operation>equals</operation>
            <value>Incentive</value>
        </filterItems>
        <infoMessage>Please select an Incentive Type Campaign to link this Level.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Levels</relationshipLabel>
    <relationshipName>Campaign_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>