force-app/main/default/objects/Campaign_Level__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Indicates short detail about the Campaign Level.</description>
    <inlineHelpText>Indicates short detail about the Campaign Level.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>