force-app/main/default/objects/Campaign_Level__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the incentive level is active or not. Allows for editing incentives, activating, and deactivating.</description>
    <inlineHelpText>Indicates if the incentive level is active or not. Allows for editing incentives, activating, and deactivating.</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>