force-app/main/default/objects/Campaign_Level__c/fields/Message_Body_Default__c.field-meta.xml
<CustomField>
    <fullName>Message_Body_Default__c</fullName>
    <description>The default content of the Message body, for mobile notification, limited to 255 characters</description>
    <inlineHelpText>The default content of the Message body, for mobile notification, limited to 255 characters</inlineHelpText>
    <label>Message Body Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>