force-app/main/default/objects/Campaign_Level__c/fields/Message_Subject_Default__c.field-meta.xml
<CustomField>
    <fullName>Message_Subject_Default__c</fullName>
    <description>The default content of the Message subject, for mobile notification, limited to 80 characters.</description>
    <inlineHelpText>The default content of the Message subject, for mobile notification, limited to 80 characters.</inlineHelpText>
    <label>Message Subject Default</label>
    <length>80</length>
    <type>Text</type>
</CustomField>