force-app/main/default/objects/Campaign_Level__c/fields/Minimum_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Donation_Amount__c</fullName>
    <description>Indicates the number of eligible donations for a member of the Campaign to reach to get this incentive.</description>
    <inlineHelpText>Indicates the number of eligible donations for a member of the Campaign to reach to get this incentive.</inlineHelpText>
    <label>Minimum Donation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>