force-app/main/default/objects/Campaign_Level__c/fields/Next_Campaign_Level__c.field-meta.xml
<CustomField>
    <fullName>Next_Campaign_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the next incentive level that follows this Campaign Level.</description>
    <inlineHelpText>Indicates the next incentive level that follows this Campaign Level.</inlineHelpText>
    <label>Next Campaign Level</label>
    <referenceTo>Campaign_Level__c</referenceTo>
    <relationshipLabel>Next Campaign Levels</relationshipLabel>
    <relationshipName>Campaign_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>