force-app/main/default/objects/Campaign_Level__c/validationRules/Dollar_or_Point_Amount_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dollar_or_Point_Amount_is_Required</fullName>
    <active>true</active>
    <description>If active, an award dollar or point amount is required. This is necessary for firing payment requests for this Campaign Level.</description>
    <errorConditionFormula>isActive__c &amp;&amp;
ISBLANK(Award_Dollar_Amount__c) &amp;&amp;
ISBLANK(Award_Point_Amount__c)</errorConditionFormula>
    <errorMessage>An Award Dollar and/or Point Amount is required if this Campaign Level is set to Active.</errorMessage>
</ValidationRule>