force-app/main/default/objects/Campaign_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Award_Dollar_Amount__c</columns>
    <columns>Award_Point_Amount__c</columns>
    <columns>Minimum_Donation_Amount__c</columns>
    <columns>isActive__c</columns>
    <columns>Next_Campaign_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>